[gd_scene load_steps=48 format=3 uid="uid://ibrctco0fpdp"]

[ext_resource type="Script" path="res://Creatures/forsaken_ally.gd" id="1_2os6r"]
[ext_resource type="PackedScene" uid="uid://bw1r3nxt3ya8x" path="res://Objects/gate.tscn" id="1_exbt4"]
[ext_resource type="Script" path="res://Scripts/Classes/audio_library.gd" id="2_8wgr1"]
[ext_resource type="Texture2D" uid="uid://trx677cd2gom" path="res://Assets/Red Boss Sprites.png" id="3_r8rlm"]
[ext_resource type="Script" path="res://Scripts/Classes/sound_effect.gd" id="3_s620o"]
[ext_resource type="Texture2D" uid="uid://drt12ywdf66vn" path="res://Assets/Warning Area Particle Animation.png" id="3_w5jr1"]
[ext_resource type="AudioStream" uid="uid://8q6abwc5dkpi" path="res://Sfx/dash.wav" id="4_l2417"]
[ext_resource type="AudioStream" uid="uid://c6awqtpd8jux1" path="res://Sfx/hit.wav" id="5_e1k82"]
[ext_resource type="AudioStream" uid="uid://ds8rsq8hl0v6b" path="res://Sfx/jump2.wav" id="6_ngjvg"]
[ext_resource type="AudioStream" uid="uid://wm84dwuyqcmd" path="res://Sfx/dash3.wav" id="7_etp48"]
[ext_resource type="Shader" path="res://Shaders/white_pulse.gdshader" id="8_hnr4t"]
[ext_resource type="Texture2D" uid="uid://cg4qvbi357tcr" path="res://Assets/Blob Particle.png" id="8_uoyv7"]

[sub_resource type="Resource" id="Resource_gbhgb"]
script = ExtResource("3_s620o")
tag = "dash"
stream = ExtResource("4_l2417")

[sub_resource type="Resource" id="Resource_v1emv"]
script = ExtResource("3_s620o")
tag = "damage"
stream = ExtResource("5_e1k82")

[sub_resource type="Resource" id="Resource_887xx"]
script = ExtResource("3_s620o")
tag = "jump"
stream = ExtResource("6_ngjvg")

[sub_resource type="Resource" id="Resource_76amk"]
script = ExtResource("3_s620o")
tag = "dash_2"
stream = ExtResource("7_etp48")

[sub_resource type="Resource" id="Resource_6rsu8"]
script = ExtResource("2_8wgr1")
sound_effects = Array[ExtResource("3_s620o")]([SubResource("Resource_gbhgb"), SubResource("Resource_v1emv"), SubResource("Resource_887xx"), SubResource("Resource_76amk")])

[sub_resource type="ShaderMaterial" id="ShaderMaterial_mxv3u"]
shader = ExtResource("8_hnr4t")
shader_parameter/shine_color = Color(1, 1, 1, 0)
shader_parameter/alpha_limit = 0.0
shader_parameter/cycle_speed = 0.0
shader_parameter/full_pulse_cycle = false
shader_parameter/mode = 2

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ogmpo"]
radius = 4.0
height = 10.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ic4v5"]
size = Vector2(92, 4)

[sub_resource type="Animation" id="Animation_adkl5"]
resource_name = "Charge Shot"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BossSprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(112, 0, 16, 16)]
}

[sub_resource type="Animation" id="Animation_jk7y0"]
resource_name = "Dive"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BossSprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Rect2(80, 0, 16, 16)]
}

[sub_resource type="Animation" id="Animation_ngsaw"]
resource_name = "Fall"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BossSprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Rect2(16, 16, 16, 16)]
}

[sub_resource type="Animation" id="Animation_22ylf"]
resource_name = "Idle"
loop_mode = 1
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BossSprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Rect2(48, 48, 16, 16), Rect2(32, 48, 16, 16), Rect2(16, 48, 16, 16), Rect2(0, 48, 16, 16)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TrailParticle:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_fxak2"]
resource_name = "Jump"
length = 0.001
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BossSprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Rect2(0, 16, 16, 16)]
}

[sub_resource type="Animation" id="Animation_q3c1g"]
resource_name = "Kneel"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BossSprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Rect2(96, 16, 16, 16)]
}

[sub_resource type="Animation" id="Animation_v3xq1"]
resource_name = "Land"
length = 0.250005
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BossSprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.250005),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Rect2(32, 16, 16, 16), Rect2(48, 48, 16, 16)]
}

[sub_resource type="Animation" id="Animation_xfq7d"]
resource_name = "Lie Down"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BossSprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Rect2(80, 16, 16, 16)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TrailParticle:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_k3v3x"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BossSprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Rect2(48, 48, 16, 16)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TrailParticle:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vfgup"]
_data = {
"Charge Shot": SubResource("Animation_adkl5"),
"Dive": SubResource("Animation_jk7y0"),
"Fall": SubResource("Animation_ngsaw"),
"Idle": SubResource("Animation_22ylf"),
"Jump": SubResource("Animation_fxak2"),
"Kneel": SubResource("Animation_q3c1g"),
"Land": SubResource("Animation_v3xq1"),
"Lie Down": SubResource("Animation_xfq7d"),
"RESET": SubResource("Animation_k3v3x")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8nrkr"]
size = Vector2(8, 4)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_nqw73"]
blend_mode = 1

[sub_resource type="Curve" id="Curve_sgbum"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_daxj2"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="Gradient" id="Gradient_ocug3"]
colors = PackedColorArray(0.78413, 0.296232, 0.358534, 1, 0.529586, 0.0537312, 0.588683, 1)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_wcn6s"]
blend_mode = 1
particles_animation = true
particles_anim_h_frames = 5
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Gradient" id="Gradient_le6o7"]
colors = PackedColorArray(0.761125, 0.876223, 0.987051, 1, 0.95622, 0.303941, 0.520313, 1)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_nug2c"]
particles_animation = true
particles_anim_h_frames = 9
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_ab87g"]
load_path = "res://.godot/imported/Sparkle2 Particles.png-454b75e1923393dfba995efc4fbb7260.ctex"

[sub_resource type="Gradient" id="Gradient_traxk"]
colors = PackedColorArray(1, 1, 1, 1, 0.352941, 0.854902, 0.94902, 1)

[sub_resource type="Animation" id="Animation_71s7e"]
resource_name = "Dive Impact"
length = 0.200007
step = 0.0666667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DiveImpactComp/DiveImpactSprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.133333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Rect2(160, 0, 96, 32), Rect2(160, 32, 96, 32)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DiveImpactComp/DiveImpactSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("DiveImpactComp/DiveImpactParticles:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_mgba4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("DiveImpactComp/DiveImpactSprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Rect2(160, 0, 96, 32)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DiveImpactComp/DiveImpactSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("DiveImpactComp/DiveImpactParticles:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wsg3y"]
_data = {
"Dive Impact": SubResource("Animation_71s7e"),
"RESET": SubResource("Animation_mgba4")
}

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_6nsxh"]
blend_mode = 1

[sub_resource type="Curve" id="Curve_556g0"]
max_value = 12.0
_data = [Vector2(0, 12), 0.0, 0.0, 0, 0]
point_count = 1

[sub_resource type="Gradient" id="Gradient_24h82"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g00i6"]
size = Vector2(8, 8)

[node name="BossEnvironment" type="Area2D"]
collision_layer = 0
collision_mask = 8
script = ExtResource("1_2os6r")
sfxs = SubResource("Resource_6rsu8")

[node name="ForsakenAlly" type="CharacterBody2D" parent="." groups=["Enemy"]]
collision_layer = 2
collision_mask = 0

[node name="BossSprite" type="Sprite2D" parent="ForsakenAlly"]
z_index = 4
material = SubResource("ShaderMaterial_mxv3u")
texture = ExtResource("3_r8rlm")
region_enabled = true
region_rect = Rect2(48, 48, 16, 16)

[node name="HurtColl" type="CollisionShape2D" parent="ForsakenAlly"]
z_index = 7
position = Vector2(0, 1)
shape = SubResource("CapsuleShape2D_ogmpo")

[node name="DiveHurtCull" type="CollisionShape2D" parent="ForsakenAlly"]
position = Vector2(0, 7)
shape = SubResource("RectangleShape2D_ic4v5")
disabled = true

[node name="BossAnimPlayer" type="AnimationPlayer" parent="ForsakenAlly"]
libraries = {
"": SubResource("AnimationLibrary_vfgup")
}
autoplay = "Idle"

[node name="GroundRay" type="RayCast2D" parent="ForsakenAlly"]
z_index = 6
target_position = Vector2(0, 9)

[node name="HitArea" type="Area2D" parent="ForsakenAlly"]
collision_layer = 0
collision_mask = 8

[node name="HitColl" type="CollisionShape2D" parent="ForsakenAlly/HitArea"]
z_index = 6
position = Vector2(0, -4)
shape = SubResource("RectangleShape2D_8nrkr")

[node name="TrailParticle" type="CPUParticles2D" parent="ForsakenAlly"]
z_index = 3
material = SubResource("CanvasItemMaterial_nqw73")
amount = 40
lifetime = 0.4
emission_shape = 1
emission_sphere_radius = 0.5
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 1.0
initial_velocity_max = 2.0
angular_velocity_min = -50.0
angular_velocity_max = 50.0
angle_max = 90.0
scale_amount_min = 4.0
scale_amount_max = 5.0
scale_amount_curve = SubResource("Curve_sgbum")
color = Color(1, 1, 1, 0.592157)
color_ramp = SubResource("Gradient_daxj2")
color_initial_ramp = SubResource("Gradient_ocug3")

[node name="FinalPhaseParticles" type="CPUParticles2D" parent="ForsakenAlly"]
z_index = 3
material = SubResource("CanvasItemMaterial_wcn6s")
position = Vector2(0, 4)
emitting = false
amount = 20
lifetime = 3.0
texture = ExtResource("8_uoyv7")
emission_shape = 1
emission_sphere_radius = 4.0
direction = Vector2(0, -1)
spread = 0.0
gravity = Vector2(0, 0)
initial_velocity_min = 15.0
initial_velocity_max = 20.0
orbit_velocity_min = -0.02
orbit_velocity_max = 0.02
color_initial_ramp = SubResource("Gradient_le6o7")
anim_speed_min = 1.0
anim_speed_max = 1.0
anim_offset_max = 0.222

[node name="DiveImpactComp" type="Node2D" parent="."]

[node name="DiveImpactSprite" type="Sprite2D" parent="DiveImpactComp"]
visible = false
modulate = Color(1, 1, 1, 0.639216)
z_index = 6
texture = ExtResource("3_r8rlm")
region_enabled = true
region_rect = Rect2(160, 0, 96, 32)

[node name="DiveImpactParticles" type="CPUParticles2D" parent="DiveImpactComp"]
z_index = 6
material = SubResource("CanvasItemMaterial_nug2c")
amount = 30
lifetime = 2.0
one_shot = true
explosiveness = 1.0
lifetime_randomness = 0.5
local_coords = true
texture = SubResource("CompressedTexture2D_ab87g")
emission_shape = 3
emission_rect_extents = Vector2(48, 1)
direction = Vector2(0, -1)
spread = 10.0
gravity = Vector2(0, 0)
initial_velocity_min = 20.0
initial_velocity_max = 70.0
color_initial_ramp = SubResource("Gradient_traxk")
anim_speed_min = 1.0
anim_speed_max = 1.0
anim_offset_min = 0.25
anim_offset_max = 0.375

[node name="EnvAnimPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_wsg3y")
}

[node name="WarningParticle" type="CPUParticles2D" parent="."]
z_index = 5
material = SubResource("CanvasItemMaterial_6nsxh")
position = Vector2(31, -16)
emitting = false
amount = 3
lifetime = 0.5
one_shot = true
local_coords = true
texture = ExtResource("3_w5jr1")
direction = Vector2(0, -1)
spread = 0.0
gravity = Vector2(0, 0)
initial_velocity_min = 15.0
initial_velocity_max = 15.0
damping_min = 20.0
damping_max = 20.0
split_scale = true
scale_curve_x = SubResource("Curve_556g0")
scale_curve_y = null
color_ramp = SubResource("Gradient_24h82")

[node name="Gate" parent="." instance=ExtResource("1_exbt4")]
position = Vector2(-24, 0)

[node name="Gate2" parent="." instance=ExtResource("1_exbt4")]
position = Vector2(-40, 0)

[node name="ActivationColl" type="CollisionShape2D" parent="."]
position = Vector2(-56, 0)
shape = SubResource("RectangleShape2D_g00i6")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_entered" from="ForsakenAlly/HitArea" to="." method="_on_hit_area_body_entered"]
